--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,10 @@ body{
 	color: #3A3A3A;
 }
 
+.box{
+ 	border:1px solid gray; 
+}
+
 
 .bs-mat2{
 	box-shadow:0 0px 8px rgba(0, 0, 0, 0.19), 0 1px 2px rgba(0, 0, 0, 0.23)
